start modflow offline run - global

--- a/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_v2024-04-26.ini
+++ b/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_v2024-04-26.ini
@@ -7,7 +7,7 @@
 #~ outputDir = /scratch-shared/edwindql/test_pcrglobwb_globgm/test_globgm_oflline/
 #~ outputDir = /scratch-shared/edwindql/test_pcrglobwb_globgm/java_05min/
 
-outputDir    = /scratch-shared/edwin/pcrglobwb_globgm_offline_v2024-04-26/java_05min/
+outputDir    = /scratch-shared/edwin/pcrglobwb_globgm_offline_v2024-04-26/global_05min/
 
 
 # Set the input directory map in an absolute path . 
@@ -25,7 +25,7 @@ inputDir     = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_aqueduct/versi
 #~ cloneMap = general/cloneMaps/RhineMeuse05min.clone.map
 #~ cloneMap = /projects/0/dfguu/data/hydroworld/others/Java/Java05min.clone.map
 
-cloneMap    = /projects/0/dfguu/data/hydroworld/others/Java/Java05min.clone.map
+cloneMap    = general/lddsound_05min_version_20210330.map
 
 
 # The area/landmask of interest:
