prepare the steady-state ini file and related job file

--- a/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
+++ b/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
@@ -294,15 +294,27 @@ relativeElevationFiles     = global_30sec/landSurface/topography/merit_dem_proce
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s) - TODO: Replace with the naturalized version from the Aqueduct run. 
-avgDischargeInputMap              = /projects/0/einf321/edwinmod/data/pcrglobwb_gmglob_input/develop/example_output/pcrglobwb/discharge_30sec_gmd_paper/average_1960-2010/average_discharge_m3_per_second_1960_2010_correct_lat.nc
+#~ avgDischargeInputMap              = /projects/0/einf321/edwinmod/data/pcrglobwb_gmglob_input/develop/example_output/pcrglobwb/discharge_30sec_gmd_paper/average_1960-2010/average_discharge_m3_per_second_1960_2010_correct_lat.nc
 # - average runoff (unit: m/day)
 avgRunoffInputMap                 = None
 # - average groundwater recharge (unit: m/day) - TODO: Replace with the naturalized version from the Aqueduct run. 
-avgGroundwaterRechargeInputMap    = /projects/0/einf321/edwinmod/data/pcrglobwb_gmglob_input/develop/example_output/pcrglobwb/global_05min_gmd_paper_output/average_1960-2010/average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
+#~ avgGroundwaterRechargeInputMap    = /projects/0/einf321/edwinmod/data/pcrglobwb_gmglob_input/develop/example_output/pcrglobwb/global_05min_gmd_paper_output/average_1960-2010/average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
 # - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
+
+
+edwin@tcn1170.local.snellius.surf.nl:/scratch-shared/barryData_globgm/steady_state$ ls -lah
+total 2.8G
+drwxr-xr-x. 2 bvjaarsv bvjaarsv 4.0K Apr 30 10:49 .
+drwxr-xr-x. 3 bvjaarsv bvjaarsv 4.0K Apr 30 10:49 ..
+-rw-r--r--. 1 bvjaarsv bvjaarsv 3.5G Apr 30 10:49 average_discharge_m3_per_second.nc
+-rw-r--r--. 1 bvjaarsv bvjaarsv  36M Apr 30 10:49 average_gwRecharge_m_per_day.nc
+
+# - using the files prepare by Barry (from the Aqueduct run with W5E5 forcing)
+avgDischargeInputMap           = /scratch-shared/barryData_globgm/steady_state/average_discharge_m3_per_second.nc
+avgGroundwaterRechargeInputMap = /scratch-shared/barryData_globgm/steady_state/average_gwRecharge_m_per_day.nc
 
 
 # estimateDischargeFromRunoff = True
