--- a/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
+++ b/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
@@ -330,6 +330,35 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
 
+
+[modflowTransientInputOptions]
+
+# the following is None for an online coupling between PCR-GLOBWB and MODFLOW
+#
+# - global extent, with discharge
+dischargeInputNC               = discharge_30sec_monthAvg_1958-01-31_to_2015-12-31.nc
+runoffInputNC                  = None
+groundwaterRechargeInputNC     = gwRecharge_monthTot_output_1958-01-31_to_2015-12-31_zip.nc
+groundwaterAbstractionInputNC  = totalGroundwaterAbstraction_monthTot_output_1958-01-31_to_2015-12-31_zip.nc
+channelStorageInputNC          = None
+satAreaFracInputNC             = None
+#
+
+valuesRechargeAndAbstractionInMonthlyTotal = True
+
+# estimateDischargeFromRunoff = True
+# valuesRunoffInMonthlyTotal  = True
+
+# initial conditions for groundwater head (unit: m)
+groundwaterHeadLayer1Ini = None
+groundwaterHeadLayer2Ini = None
+
+usingPredefinedInitialHead = False
+# - if False, the initial groundwater head(s) will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
+# - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
+# - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
+
+
 [reportingForModflowOptions]
 
 # output files from modflow calculation that will be written in the disk in netcdf files:
