transient up to run_model

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -19,8 +19,8 @@ institution = Department of Physical Geography, Utrecht University
 title       = PCR-GLOBWB-MODFLOW offline coupling
 description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
 
-startTime = 1958-01-01
-endTime   = 2015-12-31
+startTime = 1960-01-01
+endTime   = 1960-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
@@ -197,11 +197,11 @@ usingPredefinedInitialHead = False
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s)
-avgDischargeInputMap              = DISCHARGE_FILE
+avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
 # - average runoff (unit: m/day)
 avgRunoffInputMap                 = None
 # - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = GW_RECHARGE_FILE
+avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
 # - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
