--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -19,8 +19,8 @@ institution = Department of Physical Geography, Utrecht University
 title       = PCR-GLOBWB-MODFLOW offline coupling
 description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
 
-startTime = 2014-01-01
-endTime   = 2014-12-31
+startTime = START_YEAR-01-01
+endTime   = END_YEAR-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
@@ -170,10 +170,10 @@ HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
 #
 # - global extent, with discharge
-dischargeInputNC               = DISCHARGE_FILE
+dischargeInputNC               = FORCING_DIR/discharge_30sec_monthAvg_%04d.nc
 runoffInputNC                  = None
-groundwaterRechargeInputNC     = GW_RECHARGE_FILE
-groundwaterAbstractionInputNC  = GW_ABSTRACTION_FILE
+groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge_monthTot_output.nc
+groundwaterAbstractionInputNC  = FORCING_DIR/totalGroundwaterAbstraction_monthTot_output.nc
 channelStorageInputNC          = None
 #
 
