adopting jarno's tool

--- a/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
+++ b/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
@@ -288,6 +288,9 @@ relativeElevationLevels    = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60
 relativeElevationFiles     = global_30sec/landSurface/topography/merit_dem_processed/version_2021-02-XX/maps_covered_with_zero/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.map
 
 
+# option to use modflow6
+using_modflow6 = True
+
 
 #######################################################################################################################################################
 [modflowSteadyStateInputOptions]
