test with multiple drains

--- a/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
+++ b/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop.ini
@@ -2,7 +2,7 @@
 
 # Set the pcrglobwb output directory in an absolute path.
 #~ outputDir = {globgm_dir}/map_input/steady-state/$tile$/
-outputDir   = /scratch-shared/edwin/test_globgm/map_input/steady-state/$tile$/
+outputDir   = /scratch-shared/edwinaha/test_globgm/map_input/steady-state/$tile$/
 
 # Set the input directory map in an absolute path.
 #~ inputDir = {yoda_input}
@@ -18,7 +18,7 @@ inputDir    = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/
 # - Spatial resolution and coverage are based on this map:
 #~ cloneMap = {yoda_input}/clonemap_15deg/map/$tile$.map
 
-cloneMap = /projects/0/einf321/edwinmod/data/pcrglobwb_gmglob_input/version_2022-10-31/clonemap_15deg_map/$tile$.map
+cloneMap = clonemap_15deg_map_globgm_jarno/$tile$.map
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
@@ -277,9 +277,9 @@ log_10_multiplier_for_river_bed_conductance    = 0.0
 
 
 
-#~ # option to use multiple drains
-#~ multiple_drains = True
-#~ varying_drain_conductances = True
+# option to use multiple drains
+multiple_drains = True
+varying_drain_conductances = True
 
 
 # files for relative elevation values (above minimum dem) 
@@ -310,7 +310,11 @@ avgChannelStorageInputMap         = None
 
 # - using the files prepare by Barry (from the Aqueduct run with W5E5 forcing)
 avgDischargeInputMap           = /scratch-shared/barryData_globgm/steady_state/average_discharge_m3_per_second.nc
-avgGroundwaterRechargeInputMap = /scratch-shared/barryData_globgm/steady_state/average_gwRecharge_m_per_day.nc
+
+#~ avgGroundwaterRechargeInputMap = /scratch-shared/barryData_globgm/steady_state/average_gwRecharge_m_per_day.nc
+
+avgGroundwaterRechargeInputMap = /projects/0/dfguu/users/edwin/data/arfan_files_thesis/groundwater_recharge/average_gwRecharge_mperday.map
+
 
 
 # estimateDischargeFromRunoff = True
