add gwRecharge Downscaling

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -226,6 +226,11 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
+
+#Use correction factor downscaling approach
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+
 [reportingForModflowOptions]
 
 # output files from modflow calculation that will be written in the disk in netcdf files:
