--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -191,6 +191,8 @@ usingPredefinedInitialHead = False
 # - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
 
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 #######################################################################################################################################################
 [modflowSteadyStateInputOptions]
@@ -225,6 +227,9 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
+
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 [reportingForModflowOptions]
 
