correct gwRecharge preprocessing

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -228,7 +228,7 @@ extraSpinUpYearsWith30DayStressPeriod  = 0
 
 
 #Use correction factor downscaling approach
-gwRechargeDownscale = True
+gwRechargeDownscale = False
 gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 [reportingForModflowOptions]
