test for the rhine-meuse

--- a/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
+++ b/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
@@ -51,6 +51,13 @@ endTime      = 2022-12-31
 
 
 
+[landSurfaceOptions]
+
+# if using MODFLOW, 'limitAbstraction' (in the 'landSurfaceOptions') must be True (as the abstraction cannot exceed storGroundwater; the concept of fossil groundwater is also abandoned)
+limitAbstraction = True
+
+
+
 [groundwaterOptions]
 
 useMODFLOW = True
