test/debug for beda

--- a/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
+++ b/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
@@ -328,9 +328,9 @@ usingPredefinedInitialHead = False
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s)
-avgDischargeInputMap              = /scratch-shared/bbauer/240528_pgb_run_new_forcing/global_merged/
+avgDischargeInputMap              = /scratch-shared/bbauer/240528_pgb_run_new_forcing/global_merged/discharge_monthAvg_output_timavg.map
 # - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = /scratch-shared/bbauer/240528_pgb_run_new_forcing/global_merged/
+avgGroundwaterRechargeInputMap    = /scratch-shared/bbauer/240528_pgb_run_new_forcing/global_merged/gwRecharge_avgmperday_output.map
 # - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
