test/debug for beda

--- a/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
+++ b/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
@@ -349,19 +349,19 @@ groundwaterHeadLayer2Estimate = None
 # option to ignore negative capillary rise during a steady state simulation
 ignoreCapRiseSteadyState = True
 
-#~ # option to introduce extra spin-up years (using transient simulation with constant input with 365 * 10 day stress period)
-#~ extraSpinUpYearsWith10YearStressPeriod = 8
+# option to introduce extra spin-up years (using transient simulation with constant input with 365 * 10 day stress period)
+extraSpinUpYearsWith10YearStressPeriod = 8
 
-#~ # option to introduce extra spin-up years (using transient simulation with constant input with 365 day stress period)
-#~ extraSpinUpYearsWith365DayStressPeriod = 10
+# option to introduce extra spin-up years (using transient simulation with constant input with 365 day stress period)
+extraSpinUpYearsWith365DayStressPeriod = 10
 
-#~ # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
-#~ extraSpinUpYearsWith30DayStressPeriod  = 10
+# option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
+extraSpinUpYearsWith30DayStressPeriod  = 10
 
-# for testing
-extraSpinUpYearsWith10YearStressPeriod = 2
-extraSpinUpYearsWith365DayStressPeriod = 2
-extraSpinUpYearsWith30DayStressPeriod  = 2
+#~ # for testing
+#~ extraSpinUpYearsWith10YearStressPeriod = 2
+#~ extraSpinUpYearsWith365DayStressPeriod = 2
+#~ extraSpinUpYearsWith30DayStressPeriod  = 2
 
 
 
