--- a/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
+++ b/model_tools_src/python/pcr-globwb/globgm/config/globgm_offline_05min_global_develop_for_beda.ini
@@ -1,7 +1,7 @@
 [globalOptions]
 
 
-outputDir    = /scratch-shared/edwinaha/test_globgm_offline_test_for_beda/java_05min/
+outputDir    = /scratch-shared/edwinaha/test_globgm_offline_test_for_beda/java_05min_2nd/
 
 
 # Set the input directory map in an absolute path . 
@@ -370,7 +370,7 @@ extraSpinUpYearsWith30DayStressPeriod  = 10
 [reportingForModflowOptions]
 
 # output files from modflow calculation that will be written in the disk in netcdf files:
-outMonthEndNC = groundwaterHeadLayer1,groundwaterHeadLayer2
+outMonthEndNC = groundwaterHeadLayer1,groundwaterHeadLayer2,groundwaterThicknessEstimate,groundwaterVolumeEstimate
 outAnnuaEndNC = None
 
 # At this moment, we cannot report the following.
