steady_state update - using node local storage

--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -170,7 +170,7 @@ HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
 #
 # - global extent, with discharge
-dischargeInputNC               = FORCING_DIR/discharge_30sec_monthAvg_%04d.nc
+dischargeInputNC               = FORCING_DIR/discharge.zarr
 runoffInputNC                  = None
 groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge_monthTot_output.nc
 groundwaterAbstractionInputNC  = FORCING_DIR/totalGroundwaterAbstraction_monthTot_output.nc
