update transient - use node-local

--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -9,6 +9,7 @@ inputDir    = IN_DIR
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
 cloneMap = IN_DIR/clonemap_tiles/map/$tile$.map
+; cloneMap = /projects/0/einf4705/workflow/GLOBGM/run_globgm/model_input/1_write_tiled_parameter_data/30secBergen_clone.map
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
@@ -191,7 +192,7 @@ usingPredefinedInitialHead = False
 # - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
 
-gwRechargeDownscale = True
+gwRechargeDownscale = False
 gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 #######################################################################################################################################################
@@ -199,11 +200,11 @@ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s)
-avgDischargeInputMap              = SS_DIR/forcing_input/average_discharge_m3_per_second.nc
+avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
 # - average runoff (unit: m/day)
 avgRunoffInputMap                 = None
 # - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = SS_DIR/forcing_input/average_gwRecharge_m_per_day.nc
+avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
 # - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
@@ -228,7 +229,7 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
-gwRechargeDownscale = True
+gwRechargeDownscale = False
 gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 [reportingForModflowOptions]
