add an example ini file from australia test case

--- a/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop_satareafrac.ini
+++ b/model_input/1_write_tiled_parameter_data/develop/steady-state_config_develop_satareafrac.ini
@@ -383,7 +383,7 @@ usingPredefinedInitialHead = False
 
 
 # - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
+#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
 # - additional input files that are also required
 # --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
 relativeElevationFiles  = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/global_05min/landSurface/topography/version_202104XX_from_merit_dem/maps_covered_with_zero/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.map
