dev - tried temporal splitting but needs full workflow refactor - this is where you stoppped before refactoring

--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -1,7 +1,7 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = OUT_DIR/$tile$/
+outputDir = OUT_DIR/$tile$
 
 # Set the input directory map in an absolute path.
 inputDir    = IN_DIR
@@ -19,8 +19,8 @@ institution = Department of Physical Geography, Utrecht University
 title       = PCR-GLOBWB-MODFLOW offline coupling
 description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
 
-startTime = START_YEAR-01-01
-endTime   = END_YEAR-12-31
+startTime = START_DATE
+endTime   = END_DATE
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
