start/stop functionality and writing initial head conditions for subsequent runs

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -172,9 +172,9 @@ HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 #
 # - global extent
 dischargeInputNC               = None
-runoffInputNC                  = totalRunoff_monthTot_output_1958-01-31_to_2015-12-31.zip.nc
-groundwaterRechargeInputNC     = gwRecharge_monthTot_output_1958-01-31_to_2015-12-31_zip.nc
-groundwaterAbstractionInputNC  = totalGroundwaterAbstraction_monthTot_output_1958-01-31_to_2015-12-31_zip.nc
+runoffInputNC                  = None
+groundwaterRechargeInputNC     = None
+groundwaterAbstractionInputNC  = None
 channelStorageInputNC          = None
 #
 
