--- a/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/transient_config.ini
@@ -1,5 +1,10 @@
 [globalOptions]
 
+; [model_setup]
+; clone_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/global_30sec_clone.map
+; ldd_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lddsound_30sec_version_202005XX_correct_lat.nc
+; cell_area_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/cdo_grid_area_30sec_map_correct_lat.nc
+; lake_and_reservoir_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lakes_and_reservoirs_30sec_global_2019_version_202005XX.nc
 # Set the pcrglobwb output directory in an absolute path.
 outputDir = OUT_DIR/$tile$
 
@@ -172,10 +177,9 @@ HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 # - global extent, with discharge
 dischargeInputNC               = FORCING_DIR/discharge.zarr
 runoffInputNC                  = None
-groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge_monthTot_output.nc
-groundwaterAbstractionInputNC  = FORCING_DIR/totalGroundwaterAbstraction_monthTot_output.nc
+groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge.zarr
+groundwaterAbstractionInputNC  = FORCING_DIR/gwAbstraction.zarr
 channelStorageInputNC          = None
-#
 
 valuesRechargeAndAbstractionInMonthlyTotal = True
 
