--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -193,7 +193,16 @@ usingPredefinedInitialHead = False
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
 
 
+# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
+#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
+# - additional input files that are also required
+# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
+relativeElevationFiles  = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/global_05min/landSurface/topography/version_202104XX_from_merit_dem/maps_covered_with_zero/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+minimumDEM              = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/global_05min/landSurface/topography/version_202104XX_from_merit_dem/maps_covered_with_zero/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+# TODO: Move these ones to another Options.
 #######################################################################################################################################################
+
 [modflowSteadyStateInputOptions]
 
 # The following input maps used for the steady state run
