added saturated area fraction calculuation

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -32,9 +32,9 @@ debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_filled_30sec.nc
-kSatAquifer    = k_conductivity_aquifer_filled_30sec.nc
-recessionCoeff = recession_coefficient_30sec.nc
+specificYield  = specific_yield_aquifer_30sec_filled_v20231205.nc
+kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.nc
+recessionCoeff = recession_coefficient_30sec_filled_v20231205.nc
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
@@ -165,6 +165,8 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
+using_modflow6=True
+
 
 [modflowTransientInputOptions]
 
@@ -197,9 +199,9 @@ usingPredefinedInitialHead = False
 #~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
 # - additional input files that are also required
 # --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
-relativeElevationFiles  = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/global_05min/landSurface/topography/version_202104XX_from_merit_dem/maps_covered_with_zero/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
 relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-minimumDEM              = /projects/0/dfguu/users/edwin/data/pcrglobwb_input_arise/develop/global_05min/landSurface/topography/version_202104XX_from_merit_dem/maps_covered_with_zero/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
 # TODO: Move these ones to another Options.
 #######################################################################################################################################################
 
@@ -238,7 +240,6 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
-
 
 #Use correction factor downscaling approach
 gwRechargeDownscale = False
