add snakemake dependency

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config_barryORIG.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config_barryORIG.ini
@@ -165,6 +165,7 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
+using_modflow6=True
 
 [modflowTransientInputOptions]
 
