developing a correct ini file

--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files/steady-state_config_edwin_v20240910.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files/steady-state_config_edwin_v20240910.ini
@@ -1,15 +1,34 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = OUT_DIR/$tile$/
+#~ outputDir = OUT_DIR/$tile$/
+outputDir    = /scratch-shared/edwinbar/test_globgm/
+
+#~ edwinbar@tcn741.local.snellius.surf.nl:/scratch-shared/edwinbar/globgm_input/v2024-09-04$ ls -lah
+#~ total 113G
+#~ drwxr-xr-x+ 4 edwinbar edwinbar 4.0K Sep  9 04:23 .
+#~ drwxr-xr-x+ 5 edwinbar edwinbar 4.0K Sep  9 04:23 ..
+#~ -rw-r--r--  1 edwinbar edwinbar 3.5G Sep  9 04:23 cdo_grid_area_30sec_map_correct_lat.nc
+#~ -rw-r--r--  1 edwinbar edwinbar  25G Sep  9 04:23 channel_parameters_30sec_february_2021_global_covered_with_zero.nc
+#~ drwxr-xr-x+ 4 edwinbar edwinbar 4.0K Sep  9 04:23 clonemap_15deg
+#~ -rw-r--r--  1 edwinbar edwinbar 3.5G Sep  9 04:23 confining_layer_thickness_version_2016_remapbil_to_30sec.nc
+#~ -rw-r--r--  1 edwinbar edwinbar 3.5G Sep  9 04:23 k_conductivity_aquifer_30sec_filled_v20231205.map
+#~ -r--r--r--  1 edwinbar edwinbar 1.8G Sep  9 04:23 lddsound_30sec_version_202005XX_correct_lat.nc
+#~ -rw-r--r--  1 edwinbar edwinbar 3.5G Sep  9 04:23 recession_coefficient_30sec_filled_v20231205.map
+#~ -rw-r--r--  1 edwinbar edwinbar 3.5G Sep  9 04:23 specific_yield_aquifer_30sec_filled_v20231205.map
+#~ drwxr-xr-x+ 2 edwinbar edwinbar 4.0K Sep  9 04:23 topography_05min_30sec
+#~ -rw-r--r--  1 edwinbar edwinbar  70G Sep  9 04:23 topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+
 
 # Set the input directory map in an absolute path.
-inputDir    = IN_DIR
+#~ inputDir  = IN_DIR
+inputDir     = /scratch-shared/edwinbar/globgm_input/develop/
+
 
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
-cloneMap = IN_DIR/clonemap_tiles/map/$tile$.map
-
+#~ cloneMap  = IN_DIR/clonemap_tiles/map/$tile$.map
+cloneMap     = Java30sec.clone.map
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
@@ -20,11 +39,13 @@ institution = Department of Physical Geography, Utrecht University
 title       = PCR-GLOBWB-MODFLOW offline coupling
 description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
 
+
 startTime = 1960-01-01
 endTime   = 1960-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
+
 
 [groundwaterOptions]
 
@@ -54,6 +75,7 @@ estimateOfTotalGroundwaterThickness    = thickness_05min_remapbil_to_30sec_fille
 minimumTotalGroundwaterThickness       = 50.
 maximumTotalGroundwaterThickness       = 1000.
 
+
 # assumption for the minimum transmissivity value (unit: m2/day) that can be extracted (via capillary rise and/or groundwater abstraction) - optional
 # - if None, abstraction and/or capillary rise can always occur everywhere and unlimited
 minimumTransmissivityForProductiveAquifer = 50.
@@ -61,15 +83,24 @@ minimumTransmissivityForProductiveAquifer = 50.
 
 doNotExtrapolateThickness = True
 
+
 [modflowParameterOptions]
 
-# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells (experimental)
+# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells - not needed for MODFLOW 6
 using_varying_DELR_DELC = False
-estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
-estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
+estimate_of_cell_horizontal_size_in_meter = None
+estimate_of_cell_vertical_size_in_meter   = None
+
+
+#~ # activate the following if you do not use MODFLOW 6
+#~ using_varying_DELR_DELC = True
+#~ estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
+#~ estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
+
 
 # number of modflow layers:
 number_of_layers = 2
+
 
 # Total thickness of groundwater (from both layers) is defined in the section "groundwaterOptions".
 
@@ -165,7 +196,7 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
-using_modflow6=True
+using_modflow6 = True
 
 
 [modflowTransientInputOptions]
@@ -202,25 +233,37 @@ usingPredefinedInitialHead = False
 relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
 relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
 minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+# URGENT TODO: Please check whether it makes more sense to use 
 # TODO: Move these ones to another Options.
 #######################################################################################################################################################
 
+
 [modflowSteadyStateInputOptions]
 
-# The following input maps used for the steady state run
-# - average discharge (unit: m3/s)
-avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
-# - average runoff (unit: m/day)
+
+avgDischargeInputMap              = 0.0
 avgRunoffInputMap                 = None
-# - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
-# - average groundwater abstraction (unit: m/day)
+avgGroundwaterRechargeInputMap    = 0.0
 avgGroundwaterAbstractionInputMap = 0.0
-# - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
 
-# saturated area fraction map
-satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
+
+#~ # The following input maps used for the steady state run
+#~ # - average discharge (unit: m3/s)
+#~ avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
+#~ # - average runoff (unit: m/day)
+#~ avgRunoffInputMap                 = None
+#~ # - average groundwater recharge (unit: m/day)
+#~ avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
+#~ # - average groundwater abstraction (unit: m/day)
+#~ avgGroundwaterAbstractionInputMap = 0.0
+#~ # - average channel storage (unit: m3) - optional
+#~ avgChannelStorageInputMap         = None
+
+
+
+#~ # saturated area fraction map
+#~ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 
 # estimateDischargeFromRunoff = True
 
@@ -228,6 +271,7 @@ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 usingInitialHeadEstimate = False
 groundwaterHeadLayer1Estimate = None
 groundwaterHeadLayer2Estimate = None
+
 
 # option to ignore negative capillary rise during a steady state simulation
 ignoreCapRiseSteadyState = True
@@ -241,9 +285,11 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
-#Use correction factor downscaling approach
-gwRechargeDownscale = False
-gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+#~ # use correction factor downscaling approach
+#~ gwRechargeDownscale = False
+#~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+
+
 
 [reportingForModflowOptions]
 
