developing a correct ini file

--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files/steady-state_config_edwin_v20240910.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files/steady-state_config_edwin_v20240910.ini
@@ -53,9 +53,9 @@ debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_30sec_filled_v20231205.nc
-kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.nc
-recessionCoeff = recession_coefficient_30sec_filled_v20231205.nc
+specificYield  = specific_yield_aquifer_30sec_filled_v20231205.map
+kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.map
+recessionCoeff = recession_coefficient_30sec_filled_v20231205.map
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
