--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_configCalibrate.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_configCalibrate.ini
@@ -1,12 +1,7 @@
 [globalOptions]
 
-; [model_setup]
-; clone_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/global_30sec_clone.map
-; ldd_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lddsound_30sec_version_202005XX_correct_lat.nc
-; cell_area_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/cdo_grid_area_30sec_map_correct_lat.nc
-; lake_and_reservoir_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lakes_and_reservoirs_30sec_global_2019_version_202005XX.nc
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = OUT_DIR/$tile$
+outputDir = OUT_DIR/$tile$/
 
 # Set the input directory map in an absolute path.
 inputDir    = IN_DIR
@@ -14,6 +9,7 @@ inputDir    = IN_DIR
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
 cloneMap = IN_DIR/clonemap_tiles/map/$tile$.map
+
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
@@ -24,8 +20,8 @@ institution = Department of Physical Geography, Utrecht University
 title       = PCR-GLOBWB-MODFLOW offline coupling
 description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
 
-startTime = START_DATE
-endTime   = END_DATE
+startTime = 1960-01-01
+endTime   = 1960-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
@@ -37,6 +33,7 @@ debugWaterBalance = True
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
 specificYield  = specific_yield_aquifer_30sec_filled_v20231205.nc
+#TODO: Calibrate 
 kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.nc
 recessionCoeff = recession_coefficient_30sec_filled_v20231205.nc
 
@@ -45,6 +42,7 @@ minRecessionCoeff = 0.00025
 
 # river bed properties - optional
 # - river bed conductivity (m.day-1) ; the default value is taken from kSatAquifer
+#TODO: Calibrate entry resistances
 riverBedConductivity = Default
 # - river bed thickness (m) ; the default value is 0.1 m
 riverBedThickness    = 0.1
@@ -91,6 +89,7 @@ confiningLayerHorizontalConductivity      = Default
 # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
 #
 # - confining layer vertical conductivity (m/day)
+#TODO Calibrate: Anisotropy
 confiningLayerVerticalConductivity        = Default
 # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
 # - maximum confining layer conductivity
@@ -169,31 +168,25 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
-# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
-# - additional input files that are also required
-# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
-relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-
 using_modflow6=True
-# TODO: Move these ones to another Options.
+
+
 [modflowTransientInputOptions]
 
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
 #
-# - global extent, with discharge
-dischargeInputNC               = FORCING_DIR/discharge.zarr
+# - global extent
+dischargeInputNC               = None
 runoffInputNC                  = None
-groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge.zarr
-groundwaterAbstractionInputNC  = FORCING_DIR/gwAbstraction.zarr
+groundwaterRechargeInputNC     = None
+groundwaterAbstractionInputNC  = None
 channelStorageInputNC          = None
+#
 
 valuesRechargeAndAbstractionInMonthlyTotal = True
 
-# estimateDischargeFromRunoff = True
-# valuesRunoffInMonthlyTotal  = True
+estimateDischargeFromRunoff = True
+valuesRunoffInMonthlyTotal  = True
 
 # initial conditions for groundwater head (unit: m)
 groundwaterHeadLayer1Ini = None
@@ -204,10 +197,17 @@ usingPredefinedInitialHead = False
 # - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
 
-gwRechargeDownscale = False
-gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
+# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
+#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
+# - additional input files that are also required
+# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
+relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+# TODO: Move these ones to another Options.
 #######################################################################################################################################################
+
 [modflowSteadyStateInputOptions]
 
 # The following input maps used for the steady state run
@@ -221,6 +221,9 @@ avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
+
+# saturated area fraction map
+satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 
 # estimateDischargeFromRunoff = True
 
@@ -241,6 +244,7 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
+#Use correction factor downscaling approach
 gwRechargeDownscale = False
 gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
