added groundwater correction and downscaling

--- a/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
+++ b/run_globgm/model_input/1_write_tiled_parameter_data/steady-state_config.ini
@@ -242,8 +242,8 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
 #Use correction factor downscaling approach
-gwRechargeDownscale = False
-gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
 
 [reportingForModflowOptions]
 
