the prefactor should be ready, but we still miss some log info files

--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-09-XX/steady-state_config_edwin_vdevelop.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-09-XX/steady-state_config_edwin_vdevelop.ini
@@ -34,6 +34,40 @@ endTime   = 1960-12-31
 modflowOfflineCoupling = True
 
 
+[prefactorOptions]
+
+
+
+# linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_unconsolidated    = 
+boolean_in_scalar_map_of_unconsolidated    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/
+
+# linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_consolidated      = 
+boolean_in_scalar_map_of_consolidated      = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/
+
+# linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_carbonate         = 
+boolean_in_scalar_map_of_carbonate         = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/carbonate_class_v20241001.map
+
+# linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
+linear_multiplier_for_kv_confining_layer   = 
+
+# linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
+linear_multiplier_for_river_bed_resistance = 
+
+
+#~ (pcrglobwb_python3) edwinbar@fcn47.local.snellius.surf.nl:/scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_FIRST-TRY$ ls -lah *v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:15 carbonate_class_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:20 consolidated_class_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 globalbcat_meter_30sec_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 k_conductivity_aquifer_30sec_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 16:01 lithological_map_filled_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 recession_coefficient_30sec_filled_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:24 specific_yield_aquifer_30sec_v20241001.map
+#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:14 unconsolidated_class_v20241001.map
+
+
 [groundwaterOptions]
 
 debugWaterBalance = True
@@ -101,15 +135,20 @@ confiningLayerThickness                   = confining_layer_thickness_version_20
 # - TODO: Improve this with SoilGrids.
 #
 # - confining layer horizontal conductivity (m/day)
-confiningLayerHorizontalConductivity      = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+# -- based on the fine grained unconsolidated of GLHYMPS (de Graaf et al, 2017 used 0.008 m/day)
+confiningLayerHorizontalConductivity      = 0.008476
+#~ confiningLayerHorizontalConductivity   = Default
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+
 #
 # - confining layer vertical conductivity (m/day)
-confiningLayerVerticalConductivity        = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+confiningLayerVerticalConductivity        = 0.008476
+#~ confiningLayerVerticalConductivity     = Default
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
 # - maximum confining layer conductivity
-maximumConfiningLayerVerticalConductivity = 0.005
-# * PS: 0.005 used in WRI groundwater risk runs
+maximumConfiningLayerVerticalConductivity = 0.008476
+#~ maximumConfiningLayerVerticalConductivity = 0.005
+#~ # * PS: 0.005 used in WRI groundwater risk runs
 #
 # - resistance (day)
 # * By default, the resistance (1/VCONT) between two layers equals to confiningLayerThickness (m) / confiningLayerVerticalConductivity (m.day-1)
