--- a/python/steady-state_config_multiple_drain_arfan.ini
+++ b/python/steady-state_config_multiple_drain_arfan.ini
@@ -1,38 +1,29 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-#~ outputDir = OUT_DIR/$tile$/
-outputDir    = /scratch-shared/edwinbar/test_globgm/
-
+outputDir = {globgm_dir}/map_input/steady-state/$tile$/
 
 # Set the input directory map in an absolute path.
-#~ inputDir  = IN_DIR
-inputDir     = /scratch-shared/edwinbar/globgm_input/develop/
-
+inputDir    = {yoda_input}
 
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
-#~ cloneMap  = IN_DIR/clonemap_tiles/map/$tile$.map
-cloneMap     = Java30sec.clone.map
+cloneMap = {yoda_input}/clonemap_15deg/map/$tile$.map
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
 landmask    = None
 
-
 # netcdf attributes for output files:
-institution    = Department of Physical Geography, Utrecht University
-title          = GLOBGM, PCR-GLOBWB-MODFLOW offline coupling
-#~ description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
-description    = test version by Edwin
+institution = Department of Physical Geography, Utrecht University
+title       = PCR-GLOBWB-MODFLOW offline coupling
+description = by Edwin H. Sutanudjaja (contact: globgm.info@gmail.com)
 
-
-startTime = 1960-01-01
-endTime   = 1960-12-31
+startTime = 1958-01-01
+endTime   = 2015-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
-
 
 [groundwaterOptions]
 
@@ -40,9 +31,9 @@ debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_30sec_filled_v20231205.map
-kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.map
-recessionCoeff = recession_coefficient_30sec_filled_v20231205.map
+specificYield  = specific_yield_aquifer_filled_30sec.nc
+kSatAquifer    = k_conductivity_aquifer_filled_30sec.nc
+recessionCoeff = recession_coefficient_30sec.nc
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
@@ -62,7 +53,6 @@ estimateOfTotalGroundwaterThickness    = thickness_05min_remapbil_to_30sec_fille
 minimumTotalGroundwaterThickness       = 50.
 maximumTotalGroundwaterThickness       = 1000.
 
-
 # assumption for the minimum transmissivity value (unit: m2/day) that can be extracted (via capillary rise and/or groundwater abstraction) - optional
 # - if None, abstraction and/or capillary rise can always occur everywhere and unlimited
 minimumTransmissivityForProductiveAquifer = 50.
@@ -70,24 +60,15 @@ minimumTransmissivityForProductiveAquifer = 50.
 
 doNotExtrapolateThickness = True
 
-
 [modflowParameterOptions]
 
-# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells - not needed for MODFLOW 6
+# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells (experimental)
 using_varying_DELR_DELC = False
-estimate_of_cell_horizontal_size_in_meter = None
-estimate_of_cell_vertical_size_in_meter   = None
-
-
-#~ # activate the following if you do not use MODFLOW 6
-#~ using_varying_DELR_DELC = True
-#~ estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
-#~ estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
-
+estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
+estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
 
 # number of modflow layers:
 number_of_layers = 2
-
 
 # Total thickness of groundwater (from both layers) is defined in the section "groundwaterOptions".
 
@@ -183,75 +164,31 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
-#~ # option to use modflow 6 or not
-#~ using_modflow6 = True
 
 
-[modflowTransientInputOptions]
+# option to use multiple drains
+multiple_drains = True
 
-# the following is None for an online coupling between PCR-GLOBWB and MODFLOW
-#
-# - global extent
-dischargeInputNC               = None
-runoffInputNC                  = None
-groundwaterRechargeInputNC     = None
-groundwaterAbstractionInputNC  = None
-channelStorageInputNC          = None
-#
-
-valuesRechargeAndAbstractionInMonthlyTotal = True
-
-estimateDischargeFromRunoff = True
-valuesRunoffInMonthlyTotal  = True
-
-# initial conditions for groundwater head (unit: m)
-groundwaterHeadLayer1Ini = None
-groundwaterHeadLayer2Ini = None
-
-usingPredefinedInitialHead = False
-# - if False, the initial groundwater head(s) will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
-# - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
-# - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
+# files for relative elevation values (above minimum dem) 
+#~ relativeElevationLevels = 0.0, 0.10, 0.20, 0.30, 0.40, 0.50, 0.70, 1.00
+relativeElevationLevels    = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+relativeElevationFiles     = global_30sec/landSurface/topography/merit_dem_processed/version_2021-02-XX/maps_covered_with_zero/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.map
 
 
-# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
-# - additional input files that are also required
-# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
-relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-# URGENT TODO: Please check whether it makes more sense to use 
-# TODO: Move these ones to another Options.
 #######################################################################################################################################################
-
-
 [modflowSteadyStateInputOptions]
 
-
-avgDischargeInputMap              = 0.0
+# The following input maps used for the steady state run
+# - average discharge (unit: m3/s)
+avgDischargeInputMap              = average_discharge_m3_per_second_1960_2010_correct_lat.nc
+# - average runoff (unit: m/day)
 avgRunoffInputMap                 = None
-avgGroundwaterRechargeInputMap    = 0.0
+# - average groundwater recharge (unit: m/day)
+avgGroundwaterRechargeInputMap    = average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
+# - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
+# - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
-
-
-#~ # The following input maps used for the steady state run
-#~ # - average discharge (unit: m3/s)
-#~ avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
-#~ # - average runoff (unit: m/day)
-#~ avgRunoffInputMap                 = None
-#~ # - average groundwater recharge (unit: m/day)
-#~ avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
-#~ # - average groundwater abstraction (unit: m/day)
-#~ avgGroundwaterAbstractionInputMap = 0.0
-#~ # - average channel storage (unit: m3) - optional
-#~ avgChannelStorageInputMap         = None
-
-
-
-#~ # saturated area fraction map
-#~ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 
 # estimateDischargeFromRunoff = True
 
@@ -259,7 +196,6 @@ avgChannelStorageInputMap         = None
 usingInitialHeadEstimate = False
 groundwaterHeadLayer1Estimate = None
 groundwaterHeadLayer2Estimate = None
-
 
 # option to ignore negative capillary rise during a steady state simulation
 ignoreCapRiseSteadyState = True
@@ -272,12 +208,6 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
-
-
-#~ # use correction factor downscaling approach
-#~ gwRechargeDownscale = False
-#~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
-
 
 
 [reportingForModflowOptions]
